Add more integration tests
